Better spacing + Some fixes for mobile + Corrects credits display + animated mobile menu + fix switch

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .text-base-halloween {
-    @apply my-32 md:my-64 px-4 py-2 font-bold text-lg w-4/5 md:w-3/5 leading-relaxed bg-purple-800 bg-opacity-90 rounded;
+    @apply my-20vh md:my-64 px-4 py-2 font-bold text-lg w-4/5 md:w-3/5 leading-relaxed bg-purple-800 bg-opacity-90 rounded;
   } 
 
   .text-base-halloween:nth-child(even) {
